@@ -1,4 +1,4 @@
-$Id: History,v 1.23 2001-08-14 18:21:08 johna Exp $
+$Id: History,v 1.24 2001-08-17 22:49:23 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug 17, 2001, J.Allison (intercoms-V03-02-04)
+- Added G4VisManager::Draw(const G4Scale&,...
 
 Aug 14, 2001, J.Allison (intercoms-V03-02-03)
 - Coworks with vis-V03-02-11 and greps-V03-02-02.
